force-app/main/default/objects/Lunch_PTO_and_Meetings__c/Lunch_PTO_and_Meetings__c.object-meta.xml
<CustomObject>
    <label>Lunch/PTO and Meetings</label>
    <nameField>
        <label>Lunch/PTO and Meetings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lunches/PTO and Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>