force-app/main/default/objects/Lunch_PTO_and_Meetings__c/fields/Team_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Team_Involvement__c</fullName>
    <label>Team Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Entire Department</fullName>
            </value>
            <value>
                <fullName>Dentrix 1 Team</fullName>
            </value>
            <value>
                <fullName>Dentrix 2 Team</fullName>
            </value>
            <value>
                <fullName>EagleSoft Team</fullName>
            </value>
            <value>
                <fullName>SCOPE Team</fullName>
            </value>
            <value>
                <fullName>Global Team</fullName>
            </value>
            <value>
                <fullName>Vision Team</fullName>
            </value>
            <value>
                <fullName>Medical 1 Team</fullName>
            </value>
            <value>
                <fullName>Medical 2 Team</fullName>
            </value>
            <value>
                <fullName>Enterprise Team</fullName>
            </value>
            <value>
                <fullName>Rapid Response 1 Team</fullName>
            </value>
            <value>
                <fullName>Rapid Response 2 Team</fullName>
            </value>
            <value>
                <fullName>Rapid Response 3 Team</fullName>
            </value>
            <value>
                <fullName>Tier 1 Team</fullName>
            </value>
            <value>
                <fullName>Tier 2 Team</fullName>
            </value>
            <value>
                <fullName>Tier 3 Team</fullName>
            </value>
            <value>
                <fullName>Early PCU Team</fullName>
            </value>
            <value>
                <fullName>Renewal PCU Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>