force-app/main/default/objects/Lunch_PTO_and_Meetings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date_and_Time__c</columns>
    <columns>End_Date_and_Time__c</columns>
    <columns>Team_Involvement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>