force-app/main/default/objects/Lunch_PTO_and_Meetings__c/listViews/All_Meetings.listView-meta.xml
<ListView>
    <fullName>All_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Team_Involvement__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Start_Date_and_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Involvement__c</field>
        <operation>equals</operation>
        <value>Entire Department</value>
    </filters>
    <label>All Meetings</label>
</ListView>